[gd_scene load_steps=12 format=3 uid="uid://0ewh2ydcati5"]

[ext_resource type="Script" path="res://Scenes/ui.gd" id="1_mgne5"]
[ext_resource type="Texture2D" uid="uid://bmu2fpeyavpw5" path="res://Assets/GFX/BatteryMeterOutline.png" id="1_ovqda"]
[ext_resource type="Texture2D" uid="uid://befr8rs0y8fpe" path="res://Assets/GFX/BatteryPip.png" id="2_pfbjp"]
[ext_resource type="Texture2D" uid="uid://5sxbn42dg2pn" path="res://Assets/GFX/FleshBG.png" id="4_7levn"]
[ext_resource type="FontFile" uid="uid://btkqcrv2ch48l" path="res://Assets/Fonts/Kenney Future Narrow.ttf" id="5_st8ao"]
[ext_resource type="AudioStream" uid="uid://c8vdikfyu2dp2" path="res://Assets/Audio/LoopingAmbience/AmbienceLightsOut.ogg" id="6_nd11j"]

[sub_resource type="Animation" id="Animation_fcn44"]
resource_name = "GameOver"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 3),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Color(0.996078, 0.960784, 0.682353, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_4qe2s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j1u1t"]
_data = {
"GameOver": SubResource("Animation_fcn44"),
"RESET": SubResource("Animation_4qe2s")
}

[sub_resource type="Gradient" id="Gradient_vd4p8"]
interpolation_mode = 2
colors = PackedColorArray(0.0862745, 0.192157, 0.235294, 1, 0.996078, 0.960784, 0.682353, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c2638"]
gradient = SubResource("Gradient_vd4p8")
fill = 2
fill_from = Vector2(0.5, 0.5)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mgne5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="BatteryHudContainer" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("1_ovqda")
stretch_mode = 2

[node name="Margin" type="MarginContainer" parent="MarginContainer/BatteryHudContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="BatteryAmount" type="TextureRect" parent="MarginContainer/BatteryHudContainer/Margin"]
custom_minimum_size = Vector2(1, 6)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("2_pfbjp")
expand_mode = 1
stretch_mode = 1

[node name="GameOverContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="GameOverContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_7levn")
stretch_mode = 1

[node name="Label" type="Label" parent="GameOverContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.996078, 0.960784, 0.682353, 1)
theme_override_colors/font_shadow_color = Color(0.0862745, 0.192157, 0.235294, 1)
theme_override_colors/font_outline_color = Color(0.0862745, 0.192157, 0.235294, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_st8ao")
text = "YOU DIED"

[node name="CanvasModulate" type="CanvasModulate" parent="GameOverContainer"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOverContainer"]
root_node = NodePath("../CanvasModulate")
libraries = {
"": SubResource("AnimationLibrary_j1u1t")
}

[node name="WinScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="WinScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_c2638")

[node name="Label" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.996078, 0.960784, 0.682353, 1)
theme_override_colors/font_shadow_color = Color(0.0862745, 0.192157, 0.235294, 1)
theme_override_colors/font_outline_color = Color(0.0862745, 0.192157, 0.235294, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_st8ao")
text = "YOU SURVIVED"

[node name="CanvasModulate" type="CanvasModulate" parent="WinScreen"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="WinScreen"]
root_node = NodePath("../CanvasModulate")
libraries = {
"": SubResource("AnimationLibrary_j1u1t")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nd11j")
autoplay = true
bus = &"Ambience"
